--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,27 @@
 asgiref==3.2.7
+awscli==1.18.66
 beautifulsoup4==4.9.1
+boto3==1.13.16
+botocore==1.16.16
+certifi==2020.4.5.1
+cloudinary==1.20.0
+colorama==0.4.3
 Django==3.0.6
 django-bootstrap4==1.1.1
+django-storages==1.9.1
+docutils==0.15.2
+gunicorn==20.0.4
+jmespath==0.10.0
 Pillow==7.1.2
 psycopg2==2.8.5
+pyasn1==0.4.8
+python-dateutil==2.8.1
 pytz==2020.1
+PyYAML==5.3.1
+rsa==3.4.2
+s3transfer==0.3.3
+six==1.15.0
 soupsieve==2.0.1
 sqlparse==0.3.1
+urllib3==1.25.9
+whitenoise==5.1.0
